@@ -153,6 +153,8 @@ In alphabetical order (by last name)
 ** Patch to get RSpec to work w/ Heckle +/- 1.2
 * Jarkko Laine
 ** LH[#132] Plain Text stories should support Given and Given: 
+* Luis Lavena
+** LH[#244] No coloured output on Windows due missing RUBYOPT
 * Alexander Lang
 ** Patch [#198] clean up story steps after each story
 * Matthijs Langenberg
